# image_segmentation_japan

./: .gitignore  Colab_Version_Instance_Image_Segmentation_for_Window_and_Building_Detection_with_detectron2.ipynb  README.md  balloon_example.py  basic_requirements.txt  bla.py  buildings_example.py  plan_conference.md  process_predictions.py  pyproject.toml  requirements.txt  temp_delete.py  utils.py
.ipynb_checkpoints/: Colab_Version_Instance_Image_Segmentation_for_Window_and_Building_Detection_with_detectron2-checkpoint.ipynb
tests/: test_imgage_segmentation_tokyo.py
via-2.0.8/: via.html  via_demo.html  via_export_json.json  via_face_demo.html  via_project_14Jan2020_17h16m (1).json  via_project_14Jan2020_17h16m.json  via_project_train.json  via_project_val.json  via_project_val_old.json  via_wikimedia_demo.html
via-2.0.8/buildings/old_train/: via_export_coco.json  via_region_data.json
via-2.0.8/buildings/train/: via_region_data.json
via-2.0.8/buildings/val/: via_export_coco.json  via_region_data.json
via-2.0.8/old_projects/: via_project_train_old.json
via-2.0.8/train/: via_project_training.json
via-2.0.8/val/: via_project_validation.json
