[tool.poetry]
name = "imgage_segmentation_tokyo"
version = "0.1.0"
description = ""
authors = ["Markus Rosenfelder <markus.rosenfelder@is.uni-freiburg.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
